--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Biblioteka.styles.css" asp-append-version="true" />
+    <style>
+        body {
+            background-color: whitesmoke; /* Kolor tła */
+        }
+    </style>
 </head>
 <body>
     <header>
